tests/golden/type_errors/len_shadowed_call_non_function.cd
let len = 123;
print len([1]);
